--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,9 @@ body {
   color: var(--foreground);
   background-color: var(--background);
 }
-
+textarea {
+  field-sizing: content;
+}
 ::-webkit-scrollbar {
   width: 3px;
 }
